Enhance auction catalog extraction with new crew classes and improved task configurations
- Introduced `CatalogSetupCrew` for URL validation and buyer premium discovery, replacing `ScreeningCrewPartA`.
- Added `PageExtractionCrew` for single-page lot extraction, streamlining the extraction process.
- Updated task configurations in `tasks_1a.yaml` to reflect new extraction strategies and pagination detection requirements.
- Enhanced agent configurations in `agents.yaml` to clarify roles and responsibilities for auction catalog extraction.
- Implemented JSON parsing improvements in `app.py` to handle truncated outputs and ensure robust data extraction.

--- a/src/fast_auction_research___speed_optimized/config/agents.yaml
+++ b/src/fast_auction_research___speed_optimized/config/agents.yaml
@@ -2,12 +2,20 @@
 scout___auction_navigator_keyword_filter:
   role: Scout - Auction Catalog Extractor
   goal: "**Extract ALL lots from {auction_url} as a structured JSON array.**
-    Scrape the complete auction catalog including all pages. Output every single lot
+    You work in two modes: (1) URL validation and pagination detection — identify how
+    the catalog is paginated, the total lot count, lots per page, and the exact URL
+    pattern for subsequent pages. (2) Per-page extraction — scrape a single page URL
+    and output every lot on that page as structured JSON. Output every single lot
     with lot_number, title, estimate_low, estimate_high, and description. Do NOT filter
     or skip lots — the system applies keyword filtering after you. Your job is 100%
     extraction, 0% filtering."
   backstory: You are a high-speed auction catalog extraction specialist. You scrape
     complete auction catalogs in bulk, handling pagination and complex page structures.
+    You are METICULOUS about pagination detection — you always inspect the page for
+    total lot counts (e.g. "245 lots", "Showing 1-60 of 510"), page navigation links
+    (Next, Page 2, numbered pagination), and identify the exact URL pattern used
+    (e.g. ?page=N, ?offset=N, ?pageNo=N, /page/N). You report pagination details
+    accurately so the orchestrator can construct all page URLs.
     You output clean, structured JSON data that downstream systems can process. You
     never skip lots or make assumptions about which lots are important — you extract
     everything and let the automated filter handle the rest. Your extraction is thorough
